# NexusEnv

./: .gitignore  README.md  SENTINELOPS_ARENA.md  SETUP.md  app.py  chart_helpers.py  inspector.py  pyproject.toml  replay_html.py  requirements-train.txt  requirements.txt  sentinel_theme.py  train.py  training_charts.py
docs/: hackathon_technical_deep_dive.md
hackathon_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
hackathon_env/server/: Dockerfile  __init__.py  app.py  hackathon_env_environment.py
plan/: README.md  phase-1-models-and-systems.md  phase-2-environment-core.md  phase-3-mcp-and-server.md  phase-4-demo-and-ui.md  phase-5-training.md  phase-6-polish-and-submit.md
sentinelops_arena/: __init__.py  attacks.py  demo.py  environment.py  metrics.py  models.py  rewards.py  server.py  task_generator.py  test_environment.py  test_phase1.py
sentinelops_arena/systems/: __init__.py  billing.py  crm.py  ticketing.py
tasks/: gaps.md  master-plan.md  master_plan.md  todo.md
training/: colab_training.ipynb  grpo_metrics.csv
