[project]
name = "sentinelops-arena"
version = "0.1.0"
description = "Multi-agent self-play RL environment for enterprise security training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "mcp>=1.26.0",
    "fastmcp>=2.14.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "gradio>=5.0.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
